// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PullQuote /> should render by default 1`] = `
.c0 {
  max-width: 636px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 2rem;
  margin-top: 2rem;
  text-align: center;
  padding: 10px 0;
  font-family: ProximaNovaCond,sans-serif;
  font-weight: lighter;
  font-style: italic;
  font-size: 25px;
  line-height: 37px;
  clear: left;
  margin-top: 2.5rem;
  margin-bottom: 2.5rem;
}

.c0::before,
.c0::after {
  content: '';
  display: block;
  width: 45px;
  height: 0;
  margin: 0 auto;
  position: relative;
  border-top-width: 1px;
  border-top-style: solid;
  border-color: #0A7BC2;
}

.c0::before {
  margin-bottom: 20px;
}

.c0::after {
  margin-top: 20px;
}

.c0 .c1 {
  display: none;
}

.c0 .c2 {
  display: block;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    max-width: 66%;
  }
}

<aside
  class="c0"
>
  <span
    class="c1 "
    contenteditable="false"
  />
  <span
    class="c2 "
  >
    This is a memorable quote from the article.
  </span>
  <span
    class="c1 "
    contenteditable="false"
  />
</aside>
`;

exports[`<PullQuote /> should render in the editor 1`] = `
.c0 {
  max-width: 636px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 2rem;
  margin-top: 2rem;
  text-align: center;
  padding: 10px 0;
  font-family: ProximaNovaCond,sans-serif;
  font-weight: lighter;
  font-style: italic;
  font-size: 25px;
  line-height: 37px;
  clear: left;
  margin-top: 2.5rem;
  margin-bottom: 2.5rem;
}

.c0::before,
.c0::after {
  content: '';
  display: block;
  width: 45px;
  height: 0;
  margin: 0 auto;
  position: relative;
  border-top-width: 1px;
  border-top-style: solid;
  border-color: #0A7BC2;
}

.c0::before {
  margin-bottom: 20px;
}

.c0::after {
  margin-top: 20px;
}

.c0 .c1 {
  display: none;
}

.c0 .c2 {
  display: block;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
}

.c3 .c1 {
  display: none;
}

.c3 .c2 {
  display: block;
  padding-left: 0;
  padding-right: 0;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    max-width: 66%;
  }
}

<aside
  class="pullquote align--center c0"
>
  <span
    class="pullquote__helper c1 "
    contenteditable="false"
  />
  <span
    class="pullquote__content c2 "
  >
    This is a memorable quote from the article.
  </span>
  <span
    class="pullquote__helper c1 "
    contenteditable="false"
  />
</aside>
`;

exports[`<PullQuote /> should render with branding disabled 1`] = `
.c0 {
  max-width: 636px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 2rem;
  margin-top: 2rem;
  text-align: center;
  padding: 10px 0;
  font-family: ProximaNovaCond,sans-serif;
  font-weight: lighter;
  font-style: italic;
  font-size: 25px;
  line-height: 37px;
  clear: left;
  margin-top: 2.5rem;
  margin-bottom: 2.5rem;
}

.c0::before,
.c0::after {
  content: '';
  display: block;
  width: 45px;
  height: 0;
  margin: 0 auto;
  position: relative;
  border-top-width: 1px;
  border-top-style: solid;
  border-color: #0A7BC2;
}

.c0::before {
  margin-bottom: 20px;
}

.c0::after {
  margin-top: 20px;
}

.c0 .c1 {
  display: none;
}

.c0 .c2 {
  display: block;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
}

.c3 .c1 {
  display: none;
}

.c3 .c2 {
  display: block;
  padding-left: 0;
  padding-right: 0;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    max-width: 66%;
  }
}

<aside
  class="pullquote align--center c0"
>
  <span
    class="pullquote__helper c1 "
    contenteditable="false"
  />
  <span
    class="pullquote__content c2 "
  >
    This is a memorable quote from the article.
  </span>
  <span
    class="pullquote__helper c1 "
    contenteditable="false"
  />
</aside>
`;

exports[`<PullQuote /> should render with left alignment 1`] = `
.c3 .c1 {
  display: none;
}

.c3 .c2 {
  display: block;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
}

.c0 {
  max-width: 636px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 2rem;
  margin-top: 2rem;
  text-align: center;
  padding: 10px 0;
  font-family: ProximaNovaCond,sans-serif;
  font-weight: lighter;
  font-style: italic;
  font-size: 25px;
  line-height: 37px;
  clear: left;
}

.c0::before,
.c0::after {
  content: '';
  display: block;
  width: 45px;
  height: 0;
  margin: 0 auto;
  position: relative;
  border-top-width: 1px;
  border-top-style: solid;
  border-color: #0A7BC2;
}

.c0::before {
  margin-bottom: 20px;
}

.c0::after {
  margin-top: 20px;
}

.c0 .c1 {
  display: none;
}

.c0 .c2 {
  display: block;
  padding-left: 0;
  padding-right: 0;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    width: 40%;
    max-width: 320px;
    float: left;
    margin-right: 2.25rem;
    text-align: left;
    margin-bottom: 0.5em;
    margin-top: 0;
  }

  .c0::before,
  .c0::after {
    margin-left: 0;
    margin-right: 0;
  }
}

<aside
  class="c0"
>
  <span
    class="c1 "
    contenteditable="false"
  />
  <span
    class="c2 "
  >
    This is a memorable quote from the article.
  </span>
  <span
    class="c1 "
    contenteditable="false"
  />
</aside>
`;
